# ChangeLog of Nadoka($Rev$)
# $Id$ 

2009-09-21  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* rice/irc.rb: remove magic comment. ruby 1.9.2 works without it.


2009-09-21  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* 0.7.2: released

	* ndk/version.rb: bumped version to 0.7.5.


2009-09-17  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* plugins/googlebot.nb: use hl because lr used by web searcher only.

2009-09-17  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* plugins/googlebot.nb: support more searcher of Google AJAX
	Search API.

2009-09-17  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* plugins/googlebot.nb: use Google AJAX Search API.
	see http://code.google.com/intl/ja/apis/ajaxsearch/ for detail.

2009-09-14  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* plugins/googlebot.nb: Google SOAP Search API (No Longer Available).
	see http://code.google.com/intl/ja/apis/soapsearch/ and
	http://googlecode.blogspot.com/2009/08/well-earned-retirement-for-soap-search.html

2009-08-21  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* nadoka.rb, ndk/server.rb: revert previous change, and use ?\x1
	instead.

2009-08-21  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* nadoka.rb, ndk/server.rb: handle ctcp on ruby 1.9.

2009-08-18  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* nadoka.rb, ndk/config.rb, rice/irc.rb: ruby 1.9 support (not
	completed yet). apply patch from unak.

2009-08-17  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* nadokarc, ndk/config.rb, ndk/server.rb: no listen when
	Client_server_port is nil.

2009-08-17  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* plugins/tenkibot.nb: omit empty min celsius.

2009-07-29  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* lib/rss_check.rb: update lirs_uri.

2009-07-29  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* 0.7.1 : released

	* ndk/version.rb : 0.7.2

2009-07-27  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* nadoka.rb: add --daemon option. (apply patch from unak)

2009-07-04  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* plugins/dictbot.nb: avoid nkf bug.